src/test/rustdoc-ui/suggestions/html-as-generics.stderr
error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:4:13
   |
LL | /// This Vec<i32> thing!
   |          ---^^^^^
   |          |
   |          help: try marking as source code with `backticks`
   |
note: the lint level is defined here
  --> $DIR/html-as-generics.rs:2:9
   |
LL | #![deny(rustdoc::invalid_html_tags)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:10:18
   |
LL | /// This vec::Vec<i32> thing!
   |          --------^^^^^
   |          |
   |          help: try marking as source code with `backticks`

error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:16:13
   |
LL | /// This i32<i32> thing!
   |          ---^^^^^
   |          |
   |          help: try marking as source code with `backticks`

error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:22:15
   |
LL | /// This Vec::<i32> thing!
   |          -----^^^^^
   |          |
   |          help: try marking as source code with `backticks`

error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:28:41
   |
LL | /// This [link](https://rust-lang.org)::<i32> thing!
   |                                       --^^^^^
   |                                       |
   |                                       help: try marking as source code with `backticks`

error: unclosed HTML tag `i32`
  --> $DIR/html-as-generics.rs:34:21
   |
LL | /// This <span>Vec::<i32></span> thing!
   |                -----^^^^^
   |                |
   |                help: try marking as source code with `backticks`

error: aborting due to 6 previous errors

